fixed rext alignment hero image

--- a/sites/all/themes/kodinn/sass/components/_hero.scss
+++ b/sites/all/themes/kodinn/sass/components/_hero.scss
@@ -32,6 +32,8 @@
         }
         p {
             margin-top: 5px;
+            line-height: inherit;
+            margin-bottom: 0;
         }
         h1 span {
             color: $color-green-2;
